# deadlock-api-tools

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cargo/: audit.toml  config.toml
.github/workflows/: audit.yml  docker-image-active-matches-scraper.yaml  docker-image-api.yaml  docker-image-builds-fetcher.yaml  docker-image-history-fetcher.yaml  docker-image-hltv-scraper.yaml  docker-image-ingest-worker.yaml  docker-image-matchdata-downloader.yaml  docker-image-mmr-calc.yaml  docker-image-rank-fetcher.yaml  docker-image-salt-scraper.yaml  docker-image-scraper.yaml  docker-image-steam-profile-fetcher.yaml  docker-image-update-assets-tables.yaml  python-docker-images.yaml  rust-docker-images.yaml
.sqlx/: query-00d111482bcd0d21702ac775f982d5548fcc8b36bd2b8d73768cc29338a3dede.json  query-015f1d4c0f4fd227f3804fb18963f70d91b21f0e49a90654fa35a19acfa2811e.json  query-39ace71475b2456236f3569b3d3940879b165eecd442d59b08055fba41f0884d.json  query-425fb9b9e265076b8ad5ea079e3f11b20f0c5ccc567e79c3544f9a015ee02b67.json  query-494854b6a451aa1cb41bb81adf75e6cea90372699c6afe68a0d6deef13465773.json  query-6aaa1e82f92e15782193c87a3f15387243fa72a11db412373fca3d45430dcb02.json  query-6f6a6a8704c50735d5f36fa44f6b6983386774acbf2acabf5f0667898509e529.json  query-76c0ab5147ea302c973b32638878ceeeaa6a2c02d1a543fca0b00f0fc6c40900.json  query-7cab49788899865027fd671d07ee9cc2d1f3a6db1222545604a0d25dfdc111d5.json  query-8686dc4c3c65cafe2799c396264fd33804693bf86b6d9edcf922b5508a7197cd.json  query-90849bed54de5c1802adeb7739b04f536ada21ecd9243b88bbc6fe964981a995.json  query-ba0f10f26b910b496031096fdad43a5a14d0f9fc3b8b69006979ea3c68ca6a70.json  query-d240631dd2bf1ce80d46c83e4854ccbc21d0b9954ab661dc0d034dd88520bc2f.json  query-d4bdf0c1d53bdbc5820e4b7b9b254f210bd682291717b8292a6706aebeb67127.json  query-f2c2948cc10ad87fd5a4bb222f9ad8a17b6e29e98d4516d9c755613e6a5a489c.json
active-matches-scraper/: Cargo.toml  Dockerfile
active-matches-scraper/src/: main.rs
active-matches-scraper/src/models/: active_match.rs  enums.rs  mod.rs
builds-fetcher/: Cargo.toml  Dockerfile  builds_fetcher.py  requirements.txt  utils.py
builds-fetcher/src/: main.rs  utils.rs
common/: Cargo.toml
common/src/: assets.rs  clients.rs  lib.rs  prioritization.rs  retry.rs  steam.rs  telemetry.rs  utils.rs
friends-rank-fetcher/: Cargo.toml
friends-rank-fetcher/src/: main.rs
glicko-mmr/: Cargo.toml
glicko-mmr/src/: config.rs  glicko.rs  lib.rs  main.rs  types.rs  utils.rs
glicko-mmr/tools/: hyper_param_tuner.rs  hyper_parameter_tuner.rs
history-fetcher/: Cargo.toml  Dockerfile  history_fetcher.py  requirements.txt  utils.py
history-fetcher/src/: main.rs  types.rs
hltv-scraper/: .gitignore  Cargo.toml  Dockerfile
hltv-scraper/src/: active_matches.rs  cli.rs  easy_poll.rs  main.rs
hltv-scraper/src/cmd/: download_single_hltv.rs  mod.rs  run_spectate_bot.rs  scrape_hltv.rs
hltv-scraper/src/hltv/: hltv_download.rs  hltv_extract_meta.rs  mod.rs
ingest-worker/: .dockerignore  Cargo.toml  Dockerfile
ingest-worker/src/: main.rs
ingest-worker/src/models/: clickhouse_match_metadata.rs  clickhouse_player_match_history.rs  enums.rs  mod.rs
matchdata-downloader/: Cargo.toml  Dockerfile
matchdata-downloader/src/: main.rs  models.rs
migrations/: 00_create_active_matches_table.sql  01_create_finished_matches_view.sql  02_create_match_info_table.sql  04_create_mmr_history_table.sql  05_create_hero_player_winrate_view.sql  06_create_match_salts_table.sql  07_create_leaderboard_view.sql  10_add_new_columns_to_active_matches_table.sql  11_create_leaderboard_v2_view.sql  13_create_player_hero_stats_view.sql
migrations/clickhouse/: 00_create_active_matches_table.sql  01_create_finished_matches_view.sql  02_create_match_info_table.sql  03_create_match_player_table.sql  04_create_mmr_history_table.sql  05_create_player_region_view.sql  06_create_match_salts_table.sql  07_create_leaderboard_view.sql  08_create_player_card.sql  09_create_player_match_history_table.sql  11_create_leaderboard_v2_view.sql  12_create_player_view.sql  13_create_player_hero_stats_view.sql  14_create_match_parties_view.sql  15_create_match_player_item_view.sql  16_create_match_player_item_v2_view.sql  17_create_items_table.sql  18_create_match_player_encoded_items_view.sql  19_create_heroes_table.sql  20_create_steam_profiles_table.sql  21_create_request_log_table.sql
migrations/postgres/: 00_create_api_key_table.sql  01_create_builds_table.sql  02_create_match_bundle_table.sql  03_create_webhook_table.sql  04_create_steam_profiles_table.sql  05_create_esports_matches_table.sql  06_create_bot_friends_table.sql  07_protected_user_accounts.sql  08_prioritized_accounts.sql
mmr-calc/: Cargo.toml  Dockerfile  hero_mmr_calc.py  hero_mmr_calc_optim.py  hero_mmr_hyper_optim.py  mmr_calc.py  mmr_calc_optim.py  mmr_hyper_optim.py  mmr_test.py  pyproject.toml  requirements.txt
mmr-calc/src/: hero_regression.rs  main.rs  regression.rs  types.rs  utils.rs
mmr-calc/src/algorithms/: basic.rs  linear_regression.rs  mod.rs
mmr_calc/: mmr_calc.py
rank-fetcher/: Dockerfile  player_rank_fetcher.py  requirements.txt  utils.py
salt-scraper/: .dockerignore  .env-example  Cargo.toml  Dockerfile
salt-scraper/src/: main.rs  models.rs
scraper/: Cargo.toml  Dockerfile
scraper/src/: main.rs
scraper/src/models/: active_match.rs  enums.rs
steam-profile-fetcher/: Cargo.toml
steam-profile-fetcher/src/: main.rs  models.rs  steam_api.rs
update-assets-tables/: Cargo.toml
update-assets-tables/src/: main.rs  models.rs
