[package]
name = "builds-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "time"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.100"
itertools = "0.14.0"
serde_json = "1.0.145"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "08baa963331b196ca3271da3799aa1211dc1641c", features = ["gc-client", "serde"] }
time = "0.3.44"
metrics = "0.24.3"
tracing = "0.1.43"
common = { version = "0.1.0", path = "../common" }
rand = "0.9.2"
