[package]
name = "builds-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "time"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.100"
itertools = "0.14.0"
serde_json = "1.0.149"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "bec6cd7d8b6bd2a10fc80d6df38637a37fd920e1", features = ["gc-client", "serde"] }
time = "0.3.47"
metrics = "0.24.3"
tracing = "0.1.44"
common = { version = "0.1.0", path = "../common" }
rand = "0.9.2"
