[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "bec6cd7d8b6bd2a10fc80d6df38637a37fd920e1", features = ["gc-client", "serde"] }
prost = "0.14.3"
metrics = "0.24.3"
tracing = "0.1.44"
clickhouse = "0.14.2"
object_store = { version = "0.13.1", features = ["aws"] }
anyhow = "1.0.101"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "time"] }
fred = { version = "10.1.0", features = ["i-hexpire"] }
metrics-exporter-prometheus = "0.18"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tryhard = "0.5"
