[package]
name = "friends-rank-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "time"] }
common = { version = "0.1.0", path = "../common" }
reqwest = "0.12.25"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
anyhow = "1.0.100"
