[package]
name = "glicko-mmr"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = { version = "0.13.3", features = ["chrono", "inserter"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"
common = { version = "0.1.0", path = "../common" }
tracing = "0.1.41"
clap = { version = "4.5.40", features = ["derive", "env"] }
chrono = "0.4.41"
roots = "0.0.8"
