[package]
name = "glicko-mmr"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = { version = "0.13.3", features = ["chrono", "inserter"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.98"
common = { version = "0.1.0", path = "../common" }
tracing = "0.1.41"
clap = { version = "4.5.41", features = ["derive", "env"] }
chrono = "0.4.41"
roots = "0.0.8"
serde_json = "1.0.141"
rand = "0.9.2"
rayon = "1.10.0"

[[bin]]
name = "glicko-mmr"
path = "src/main.rs"

[[bin]]
name = "hyper-parameter-tuner"
path = "tools/hyper_parameter_tuner.rs"
