[package]
name = "glicko-mmr"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = { version = "0.14.0", features = ["chrono", "inserter"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.100"
common = { version = "0.1.0", path = "../common" }
tracing = "0.1.41"
clap = { version = "4.5.50", features = ["derive", "env"] }
chrono = "0.4.42"
roots = "0.0.8"
serde_json = "1.0.145"
rand = "0.9.2"
rayon = "1.11.0"

[[bin]]
name = "glicko-mmr"
path = "src/main.rs"

[[bin]]
name = "hyper-parameter-tuner"
path = "tools/hyper_parameter_tuner.rs"
