[package]
name = "history-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clickhouse = "0.14.1"
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
reqwest = "0.13.1"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "22f44513a4945cb1f623877d9a6e939a542cc8d5", features = ["gc-client", "serde"] }
metrics = "0.24.3"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
