[package]
name = "history-fetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clickhouse = "0.14.2"
common = { version = "0.1.0", path = "../common" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
reqwest = "0.13.1"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "d4690706e95e1d468e09f0365e99296e321e57ac", features = ["gc-client", "serde"] }
metrics = "0.24.3"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
