[package]
name = "hltv-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
base64 = "0.22.1"
cached = { version = "0.56", features = ["async", "async_tokio_rt_multi_thread"] }
clap = { version = "4.5.54", features = ["derive", "env"] }
dashmap = "6.1.0"
fred = { version = "10.1.0", features = ["i-hexpire"] }
haste = { git = "https://github.com/deadlock-api/haste.git", rev = "8240e90d91b85fb3e6855befde4d077923fb6d5c" }
itertools = "0.14.0"
jiff = { version = "0.2.18", features = ["serde"] }
lru = "0.16.3"
metrics = "0.24.3"
object_store = { version = "0.13.1", features = ["aws"] }
prost = "0.14.3"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "bec6cd7d8b6bd2a10fc80d6df38637a37fd920e1", features = ["user-msgs"] }
thiserror = "2.0.18"
async-compression = { version = "0.4.37", features = ["tokio", "bzip2", "zstd"] }
common = { version = "0.1.0", path = "../common" }
