[package]
name = "ingest-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.36", features = ["tokio", "bzip2"] }
clickhouse = { version = "0.14.1", features = ["test-util", "time"] }
futures = "0.3.31"
prost = "0.14.1"
object_store = { version = "0.12.4", features = ["aws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "4712d051b023a1199b84adb60921211f29ebc058", features = ["gc-client"] }
metrics = "0.24.3"
tracing = "0.1.44"
tryhard = "0.5.2"
common = { version = "0.1.0", path = "../common" }
anyhow = "1.0.100"
