[package]
name = "ingest-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = { version = "0.4.37", features = ["tokio", "bzip2"] }
clickhouse = { version = "0.14.1", features = ["test-util", "time"] }
futures = "0.3.31"
prost = "0.14.3"
object_store = { version = "0.13.0", features = ["aws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "22f44513a4945cb1f623877d9a6e939a542cc8d5", features = ["gc-client"] }
metrics = "0.24.3"
tracing = "0.1.44"
tryhard = "0.5.2"
common = { version = "0.1.0", path = "../common" }
anyhow = "1.0.100"
