[package]
name = "matchdata-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
cached = { version = "0.56.0", features = ["async", "tokio"] }
clickhouse = { version = "0.14.1", features = ["time", "test-util"] }
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.17", features = ["io"] }
metrics = "0.24.3"
tracing = "0.1.43"
anyhow = "1.0.100"
object_store = { version = "0.12.4", features = ["aws"] }
common = { version = "0.1.0", path = "../common" }
