[package]
name = "mmr-calc"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.45", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
common = { version = "0.1.0", path = "../common" }
clap = { version = "4.5.39", features = ["derive"] }
itertools = "0.14.0"
tracing = "0.1.41"
