[package]
name = "salt-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "22f44513a4945cb1f623877d9a6e939a542cc8d5", features = ["gc-client"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
metrics = "0.24.3"
tracing = "0.1.44"
clickhouse = "0.14.1"
tryhard = "0.5.2"
anyhow = "1.0.100"
common = { version = "0.1.0", path = "../common" }
futures = "0.3.31"
reqwest = "0.13.1"
