[package]
name = "salt-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "d4690706e95e1d468e09f0365e99296e321e57ac", features = ["gc-client"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
metrics = "0.24.3"
tracing = "0.1.44"
clickhouse = "0.14.2"
tryhard = "0.5.2"
anyhow = "1.0.100"
common = { version = "0.1.0", path = "../common" }
futures = "0.3.31"
reqwest = "0.13.1"
