[package]
name = "salt-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
valveprotos = { git = "https://github.com/deadlock-api/valveprotos-rs.git", rev = "bec6cd7d8b6bd2a10fc80d6df38637a37fd920e1", features = ["gc-client"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
metrics = "0.24.3"
tracing = "0.1.44"
clickhouse = "0.14.2"
tryhard = "0.5.2"
anyhow = "1.0.101"
common = { version = "0.1.0", path = "../common" }
futures = "0.3.31"
reqwest = "0.13.2"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio"] }
