[package]
name = "steam-profile-fetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clickhouse = "0.14.0"
common = { path = "../common" }
itertools = "0.14.0"
metrics = "0.24.2"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
