[package]
name = "update-assets-tables"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clickhouse = "0.13.3"
common = { version = "0.1.0", path = "../common" }
metrics = "0.24.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.221", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
