[package]
name = "update-assets-tables"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clickhouse = "0.14.1"
common = { version = "0.1.0", path = "../common" }
metrics = "0.24.3"
reqwest = { version = "0.12.25", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
